tests/miz/fail/parser/fail_parser_visibility_duplicate_001.miz
public private theorem T: thesis;
